--- a/_sass/_links.scss
+++ b/_sass/_links.scss
@@ -1,4 +1,5 @@
 a {
+	color: $accent-green;
 	opacity: 0.92;
 	border-style: none;
 }
